adds interfaces to incorporate drag and drop

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       </form>
     </template>
     <template id="single-project">
-      <li>
+      //* this enables drag & drop for this element
+      <li draggable="true">
         <h2></h2>
         <h3></h3>
         <p></p>
