refactors out namespace in favor of es modules

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>ProjectManager</title>
     <link rel="stylesheet" href="app.css" />
     <!--* changed this over when refactoring to namespaces and enabling outFile in tsconfig -->
-    <script src="dist/bundle.js" defer></script>
-    <!--* <script src="dist/app.js" defer></script> -->
+    <!-- <script src="dist/bundle.js" defer></script> -->
+    <!-- <script src="dist/app.js" defer></script> -->
+
+    <script type="module" src="dist/app.js"></script>
   </head>
   <body>
     <template id="project-input">
