--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!-- <script src="dist/bundle.js" defer></script> -->
     <!-- <script src="dist/app.js" defer></script> -->
 
-    <script type="module" src="dist/app.js"></script>
+    <!-- <script type="module" src="dist/app.js"></script> -->
+    <script type="module" src="dist/bundle.js"></script>
   </head>
   <body>
     <template id="project-input">
